--- a/todo-backend/.env
+++ b/todo-backend/.env
@@ -1,5 +1,5 @@
-DB_USER="todouser"
-DB_PASSWORD="todo2023!"
+DB_USER="me"
+DB_PASSWORD="12345"
 DB_HOST="localhost"
-DB_NAME="todoexpress"
+DB_NAME="medb"
 ENABLE_DEBUG="TRUE"
